Removed padding on all sections to fix alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,6 @@ h2 {
 
 .section {
     padding: 4rem; /* Prevent navbar overlap */
-    padding-top: 100px;
 }
 
 
